@@ -6,6 +6,7 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.times;
@@ -13,29 +14,33 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.when;
 
+import java.io.File;
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 import java.util.Optional;
 
 import org.json.JSONArray;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.api.io.TempDir;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Captor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.sagebionetworks.StackConfiguration;
+import org.sagebionetworks.aws.SynapseS3Client;
 import org.sagebionetworks.repo.manager.EntityManager;
 import org.sagebionetworks.repo.manager.entity.EntityAuthorizationManager;
 import org.sagebionetworks.repo.manager.file.CsvFileHandleProvider;
 import org.sagebionetworks.repo.manager.file.FileHandleManager;
 import org.sagebionetworks.repo.manager.grid.PatchRowHandler;
-import org.sagebionetworks.repo.manager.grid.PatchStore;
+import org.sagebionetworks.repo.manager.grid.SnapshotRowHandler;
+import org.sagebionetworks.repo.manager.grid.SnapshotStore;
 import org.sagebionetworks.repo.manager.schema.JsonSchemaManager;
 import org.sagebionetworks.repo.model.ACCESS_TYPE;
 import org.sagebionetworks.repo.model.RecordSet;
@@ -62,7 +67,14 @@ import org.sagebionetworks.repo.model.table.CsvTableDescriptor;
 import org.sagebionetworks.repo.model.table.Query;
 import org.sagebionetworks.repo.model.table.Row;
 import org.sagebionetworks.table.cluster.utils.TableModelUtils;
+import org.sagebionetworks.util.FileProvider;
 
+import com.amazonaws.services.s3.model.CompleteMultipartUploadRequest;
+import com.amazonaws.services.s3.model.CompleteMultipartUploadResult;
+import com.amazonaws.services.s3.model.InitiateMultipartUploadRequest;
+import com.amazonaws.services.s3.model.InitiateMultipartUploadResult;
+import com.amazonaws.services.s3.model.UploadPartRequest;
+import com.amazonaws.services.s3.model.UploadPartResult;
 import au.com.bytecode.opencsv.CSVReader;
 
 @ExtendWith(MockitoExtension.class)
@@ -78,7 +90,7 @@ public class RecordSetCreateGridHandlerTest {
 	private AsyncJobProgressCallback mockCallback;
 
 	@Mock
-	private PatchStore mockPatchStore;
+	private SnapshotStore mockSnapshotStore;
 
 	@Mock
 	private EntityManager mockEntityManager;
@@ -95,12 +107,21 @@ public class RecordSetCreateGridHandlerTest {
 	@Mock
 	private JsonSchemaManager mockJsonSchemaManager;
 
+	@Mock
+	private FileProvider mockFileProvider;
+
 	@Captor
 	private ArgumentCaptor<String> patchCaptor;
 
 	@Spy
 	@InjectMocks
 	RecordSetCreateGridHandler handler;
+
+	@TempDir
+	File tempDir;
+	private File tempFile;
+
+	private static final String mockStackName = "test";
 
 	private Long userId;
 	private String gridSessionId;
@@ -115,12 +136,13 @@ public class RecordSetCreateGridHandlerTest {
 	private CsvTableDescriptor csvDescriptor;
 	private List<ColumnModel> csvSchema;
 	private RecordSet recordSet;
+	private JsonSchema jsonSchema;
 
 	@Mock
 	private CSVReader mockCsvReader;
 
 	@Mock
-	private PatchRowHandler mockRowHandler;
+	private SnapshotRowHandler mockRowHandler;
 
 	@BeforeEach
 	public void before() {
@@ -132,6 +154,7 @@ public class RecordSetCreateGridHandlerTest {
 		replicaId = 88L;
 		replica = new GridReplica().setReplicaId(replicaId);
 		schema$id = "someorg-somename";
+		jsonSchema = new JsonSchema().setRequired(List.of("bar"));
 
 		gridSession = new GridSession();
 
@@ -144,6 +167,9 @@ public class RecordSetCreateGridHandlerTest {
 
 		recordSet = new RecordSet().setId("syn456").setDataFileHandleId(csvFile.getId())
 				.setCsvDescriptor(csvDescriptor);
+
+		// Create a real temp file for testing
+		tempFile = new File(tempDir, "snapshot-test.cbor");
 	}
 	
 	@Test
@@ -160,7 +186,7 @@ public class RecordSetCreateGridHandlerTest {
 		when(mockAuthorizationManager.hasAccess(mockUser, recordSet.getId(), ACCESS_TYPE.DOWNLOAD)).thenReturn(AuthorizationStatus.authorized());
 		when(mockEntityManager.findBoundSchema(recordSet.getId())).thenReturn(Optional.of(
 				new JsonSchemaObjectBinding().setJsonSchemaVersionInfo(new JsonSchemaVersionInfo().set$id(schema$id))));
-		when(mockJsonSchemaManager.getValidationSchema(schema$id)).thenReturn(new JsonSchema().setRequired(List.of("bar")));
+		when(mockJsonSchemaManager.getValidationSchema(schema$id)).thenReturn(jsonSchema);
 
 		gridSession = new GridSession().setSessionId(gridSessionId);
 
@@ -172,19 +198,17 @@ public class RecordSetCreateGridHandlerTest {
 
 		when(mockFileHandleManager.getRawFileHandleUnchecked(recordSet.getDataFileHandleId())).thenReturn(csvFile);
 
-		Long maxRowSize = (long) TableModelUtils.calculateMaxRowSize(csvSchema);
-
 		doReturn(csvSchema).when(handler).getSchemaFromCsv(csvFile, csvDescriptor);
 		doReturn(mockCsvReader).when(mockCsvProvider).getCsvReader(csvFile, csvDescriptor);
-		doReturn(mockRowHandler).when(handler).getPatchRowHandler(mockPatchStore, gridSession, replica, csvSchema,
-				maxRowSize, List.of(1));
+		doReturn(mockRowHandler).when(handler).getSnapshotRowHandler(mockSnapshotStore, gridSession, replica, csvSchema,
+				 List.of(1), mockFileProvider, userId, jsonSchema);
 
 		when(mockCsvReader.readNext()).thenReturn(new String[] { "foo", "bar" }, new String[] { "1", "one" },
 				new String[] { "2", "two" }, new String[] { null, "three" }, null);
 
 		// Call under test
 		handler.createGrid(mockCallback, mockUser, new CreateGridRequest().setRecordSetId(recordSet.getId()),
-				mockPatchStore);
+				mockSnapshotStore);
 
 		verify(mockCsvReader, times(5)).readNext();
 		verify(mockCsvReader).close();
@@ -214,20 +238,18 @@ public class RecordSetCreateGridHandlerTest {
 
 		when(mockFileHandleManager.getRawFileHandleUnchecked(recordSet.getDataFileHandleId())).thenReturn(csvFile);
 
-		Long maxRowSize = (long) TableModelUtils.calculateMaxRowSize(csvSchema);
-
 		doReturn(csvSchema).when(handler).getSchemaFromCsv(csvFile, csvDescriptor);
 		doReturn(mockCsvReader).when(mockCsvProvider).getCsvReader(csvFile, csvDescriptor);
 
-		doReturn(mockRowHandler).when(handler).getPatchRowHandler(mockPatchStore, gridSession, replica, csvSchema,
-				maxRowSize, List.of());
+		doReturn(mockRowHandler).when(handler).getSnapshotRowHandler(mockSnapshotStore, gridSession, replica, csvSchema,
+				List.of(), mockFileProvider, userId, null);
 
 		when(mockCsvReader.readNext()).thenReturn(new String[] { "foo", "bar" }, new String[] { "1", "one" },
 				new String[] { "2", "two" }, new String[] { null, "three" }, null);
 
 		// Call under test
 		handler.createGrid(mockCallback, mockUser, new CreateGridRequest().setRecordSetId(recordSet.getId()),
-				mockPatchStore);
+				mockSnapshotStore);
 
 		verify(mockCsvReader, times(5)).readNext();
 		verify(mockCsvReader).close();
@@ -248,31 +270,32 @@ public class RecordSetCreateGridHandlerTest {
 		when(mockEntityManager.getEntity(mockUser, recordSet.getId(), RecordSet.class)).thenReturn(recordSet);
 		when(mockAuthorizationManager.hasAccess(mockUser, recordSet.getId(), ACCESS_TYPE.DOWNLOAD)).thenReturn(AuthorizationStatus.authorized());
 		when(mockEntityManager.findBoundSchema(recordSet.getId())).thenReturn(Optional.empty());
+		when(mockJsonSchemaManager.getValidationSchema(schema$id)).thenReturn(jsonSchema);
+		when(mockEntityManager.findBoundSchema(recordSet.getId())).thenReturn(Optional.of(
+				new JsonSchemaObjectBinding().setJsonSchemaVersionInfo(new JsonSchemaVersionInfo().set$id(schema$id))));
 
 		gridSession = new GridSession().setSessionId(gridSessionId);
 
-		when(mockGridDao.createGridSession(new CreateGridSession().setUserId(userId).setSourceId(recordSet.getId())))
+		when(mockGridDao.createGridSession(new CreateGridSession().setUserId(userId).setSchemaId(schema$id).setSourceId(recordSet.getId())))
 				.thenReturn(gridSession);
 
 		when(mockGridDao.createReplica(userId, gridSessionId, isAgent, EventSource.INTERNAL)).thenReturn(replica);
 
 		when(mockFileHandleManager.getRawFileHandleUnchecked(recordSet.getDataFileHandleId())).thenReturn(csvFile);
 
-		Long maxRowSize = (long) TableModelUtils.calculateMaxRowSize(csvSchema);
-
 		csvDescriptor = new CsvTableDescriptor().setIsFirstLineHeader(true);
 
 		doReturn(csvSchema).when(handler).getSchemaFromCsv(csvFile, csvDescriptor);
 		doReturn(mockCsvReader).when(mockCsvProvider).getCsvReader(csvFile, csvDescriptor);
-		doReturn(mockRowHandler).when(handler).getPatchRowHandler(mockPatchStore, gridSession, replica, csvSchema,
-				maxRowSize, List.of());
+		doReturn(mockRowHandler).when(handler).getSnapshotRowHandler(mockSnapshotStore, gridSession, replica, csvSchema,
+				List.of(1), mockFileProvider, userId, jsonSchema);
 
 		when(mockCsvReader.readNext()).thenReturn(new String[] { "foo", "bar" }, new String[] { "1", "one" },
 				new String[] { "2", "two" }, new String[] { null, "three" }, null);
 
 		// Call under test
 		handler.createGrid(mockCallback, mockUser, new CreateGridRequest().setRecordSetId(recordSet.getId()),
-				mockPatchStore);
+				mockSnapshotStore);
 
 		verify(mockCsvReader, times(5)).readNext();
 		verify(mockCsvReader).close();
@@ -291,10 +314,13 @@ public class RecordSetCreateGridHandlerTest {
 		when(mockEntityManager.getEntity(mockUser, recordSet.getId(), RecordSet.class)).thenReturn(recordSet);
 		when(mockAuthorizationManager.hasAccess(mockUser, recordSet.getId(), ACCESS_TYPE.DOWNLOAD)).thenReturn(AuthorizationStatus.authorized());
 		when(mockEntityManager.findBoundSchema(recordSet.getId())).thenReturn(Optional.empty());
+		when(mockJsonSchemaManager.getValidationSchema(schema$id)).thenReturn(jsonSchema);
+		when(mockEntityManager.findBoundSchema(recordSet.getId())).thenReturn(Optional.of(
+				new JsonSchemaObjectBinding().setJsonSchemaVersionInfo(new JsonSchemaVersionInfo().set$id(schema$id))));
 
 		gridSession = new GridSession().setSessionId(gridSessionId);
 
-		when(mockGridDao.createGridSession(new CreateGridSession().setUserId(userId).setSourceId(recordSet.getId())))
+		when(mockGridDao.createGridSession(new CreateGridSession().setUserId(userId).setSchemaId(schema$id).setSourceId(recordSet.getId())))
 				.thenReturn(gridSession);
 
 		when(mockGridDao.createReplica(userId, gridSessionId, isAgent, EventSource.INTERNAL)).thenReturn(replica);
@@ -303,19 +329,17 @@ public class RecordSetCreateGridHandlerTest {
 
 		IOException ioe = new IOException("nope");
 
-		Long maxRowSize = (long) TableModelUtils.calculateMaxRowSize(csvSchema);
-
 		doReturn(csvSchema).when(handler).getSchemaFromCsv(csvFile, csvDescriptor);
 		doReturn(mockCsvReader).when(mockCsvProvider).getCsvReader(csvFile, csvDescriptor);
-		doReturn(mockRowHandler).when(handler).getPatchRowHandler(mockPatchStore, gridSession, replica, csvSchema,
-				maxRowSize, List.of());
+		doReturn(mockRowHandler).when(handler).getSnapshotRowHandler(mockSnapshotStore, gridSession, replica, csvSchema,
+				List.of(1), mockFileProvider, userId, jsonSchema);
 
 		when(mockCsvReader.readNext()).thenThrow(ioe);
 
 		IllegalStateException result = assertThrows(IllegalStateException.class, () -> {
 			// Call under test
 			handler.createGrid(mockCallback, mockUser, new CreateGridRequest().setRecordSetId(recordSet.getId()),
-					mockPatchStore);
+					mockSnapshotStore);
 		});
 
 		assertEquals(ioe, result.getCause());
@@ -349,7 +373,7 @@ public class RecordSetCreateGridHandlerTest {
 		String errorMessage = assertThrows(IllegalArgumentException.class, () -> {
 			// Call under test
 			handler.createGrid(mockCallback, mockUser, new CreateGridRequest().setRecordSetId(recordSet.getId()),
-					mockPatchStore);
+					mockSnapshotStore);
 		}).getMessage();
 
 		assertEquals("Cannot determine the schema from the CSV file, at least one column header must be present.",
@@ -359,26 +383,22 @@ public class RecordSetCreateGridHandlerTest {
 	}
 
 	@Test
-	public void testGetPatchRowHandler() throws IOException {
+	public void testGetSnapshotRowHandler() throws IOException {
+		when(mockFileProvider.createTempFile("snapshot", ".cbor")).thenReturn(tempFile);
 		gridSession = new GridSession().setSessionId(gridSessionId);
 
-		long maxRowSize = (long) TableModelUtils.calculateMaxRowSize(csvSchema);
+		// Call under test
+		SnapshotRowHandler snapshotHandler = handler.getSnapshotRowHandler(mockSnapshotStore, gridSession, replica, csvSchema,
+				List.of(), mockFileProvider, userId, jsonSchema);
+
+
+		assertNotNull(snapshotHandler);
 
 		// Call under test
-		PatchRowHandler patchHandler = handler.getPatchRowHandler(mockPatchStore, gridSession, replica, csvSchema,
-				maxRowSize, List.of());
+		snapshotHandler.nextRow(new Row().setValues(Arrays.asList("1", "one")));
+		snapshotHandler.close();
 
-		assertNotNull(patchHandler);
-
-		// Call under test
-		patchHandler.nextRow(new Row().setValues(Arrays.asList("1", "one")));
-		patchHandler.close();
-
-		verify(mockPatchStore).savePatch(eq(gridSessionId), any(), patchCaptor.capture());
-
-		Patch patch = PatchCompactSerializable.deserialize(new JSONArray(patchCaptor.getValue()));
-
-		assertEquals(new LogicalTimestamp().setReplicaId(replicaId).setSequenceNumber(1L), patch.getPatchId());
+		verify(mockSnapshotStore).saveSnapshot(eq(gridSessionId), any(), eq(userId), eq(tempFile));
 	}
 
 	@Test
@@ -403,5 +423,4 @@ public class RecordSetCreateGridHandlerTest {
 			), schema);
 
 	}
-
 }
